runtime/6878713/Test6878713.sh fails Error. failed to clean up files after test

XMLWordPrintable

    • b25
    • generic
    • generic

        The following JT_HS test:

            runtime/6878713/Test6878713.sh

        is failing in nightly testing.

        Log reports:
        ava version "1.7.0-ea-fastdebug"
        Java(TM) SE Runtime Environment (build 1.7.0-ea-fastdebug-b134)
        Java HotSpot(TM) Server VM (build 21.0-b05-internal-201103222208.coleenp.7025628-fastdebug, mixed mode)
        result: Passed. Execution successful


        test result: Error. failed to clean up files after test

              Assignee:
              Ron Durbin (Inactive)
              Reporter:
              Karen Kinnear (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: