7030610: runtime/6878713/Test6878713.sh fails Error. failed to clean up files after test 7123945: runtime/6878713/Test6878713.sh require about 2G of native memory, swaps and times out

Add new diagnostic option -XX:MallocMaxTestWords=NNN and fix Test6878713.sh.

Reviewed-by: dcubed, coleenp, dholmes, iklam